print methods for confint and summary output

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,8 +1,11 @@
 useDynLib(mumocomp)
-exportClasses("mumo")
+exportClasses("mumo", "summary.mumo", "confint.mumo")
 import("sandwich")
 importFrom(Rcpp, evalCpp)
+importFrom("stats", "coef", "cov2cor", "model.matrix", "printCoefmat", "quantile")
 exportPattern("^[[:alpha:]]+")
 S3method(print, mumo)
 S3method(summary, mumo)
 S3method(confint, mumo)
+S3method(print, summary.mumo)
+S3method(print, confint.mumo)
