--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,5 +8,6 @@ Maintainer: Daniel Gerhard <00gerhard@gmail.com>
 Description: Simultaneous tests for general linear hypotheses in multiple parametric models.
 License: GPL-2
 Depends: sandwich
+Suggests: SimComp
 Imports: Rcpp (>= 0.12.5)
 LinkingTo: Rcpp, RcppArmadillo
